name:                ofborg-stats
version:             0.1.0.0
synopsis:            Library for parsing out ofborg statistics
description:
        Simple haskell interface for ofborg's stats interface.
        https://github.com/nixos/ofborg.
homepage:            https://github.com/shlevy/ofborg-stats
license:             Apache-2.0
license-file:        LICENSE
author:              Shea Levy
maintainer:          shea@shealevy.com
copyright:           Copyright 2018 Shea Levy
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Development.CI.Ofborg.Stats,
                       Development.CI.Ofborg.Stats.FromJSON,
                       Development.CI.Ofborg.Stats.FromServer,
                       Development.CI.Ofborg.Stats.FromServer.Wreq
  build-depends:       base, text, unordered-containers, attoparsec,
                       aeson, bytestring, wreq, lens
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/shlevy/ofborg-stats.git